# cu-robot-autonomo

./: .gitignore  CAMBIOS_UNIDADES.md  README.md  pyproject.toml  reporte_proyecto.txt  requirements.txt  test_differential_drive.py  test_env.py  test_env_debug.py
checkpoints/: dqn_01_interrupt_20251031_1725.pth  dqn_aki_interrupt_20251103_1958.pth  dqn_aki_interrupt_20251103_1959.pth  dqn_calli_episode_1000.pth  dqn_calli_episode_250.pth  dqn_calli_episode_500.pth  dqn_calli_episode_750.pth  dqn_calli_final_20251104_192538.pth  dqn_calli_final_20251104_195333.pth  dqn_default_interrupt_20251031_1504.pth  dqn_ellie_interrupt_20251026_1607.pth  dqn_ellie_interrupt_20251026_1657.pth  dqn_ellie_interrupt_20251027_1729.pth  dqn_ellie_interrupt_20251027_1733.pth  dqn_ellie_interrupt_20251027_1814.pth  dqn_ellie_interrupt_20251027_1901.pth  dqn_ellie_interrupt_20251028_1624.pth  dqn_ellie_interrupt_20251029_1743.pth  dqn_fubuki_episode_250.pth  dqn_fubuki_final_20251103_234911.pth  dqn_fubuki_interrupt_20251103_2351.pth  dqn_gigi.pth  dqn_gigi_episode_1000.pth  dqn_gigi_episode_250.pth  dqn_gigi_episode_500.pth  dqn_gigi_episode_750.pth  dqn_gigi_final_20251104_192652.pth  dqn_gigi_final_20251104_194607.pth  dqn_gigi_interrupt_20251104_1928.pth  dqn_gura_episode_1000.pth  dqn_gura_episode_250.pth  dqn_gura_episode_500.pth  dqn_gura_episode_750.pth  dqn_gura_final_20251104_194502.pth  dqn_gura_interrupt_20251029_1841.pth  dqn_hachama_interrupt_20251103_2034.pth  dqn_hachama_interrupt_20251103_2338.pth  dqn_ina_episode_250.pth  dqn_ina_episode_500.pth  (+15 more)
crt_car_env/: __init__.py
(+15 files in other folders)
