[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crt_car_env"]

[project]
name = "crt_car_env"
version = "0.0.1"
dependencies = [
  "gymnasium",
  "pygame>=2.1.3",
  "pre-commit",
  "torch>=2.0.0",
  "numpy>=1.21.0",
  "wandb",  # Para seguimiento de experimentos
]
